# rust-stock-analyzer

./: .gitignore  LICENSE  README.md
backend/analytics/: Cargo.toml
backend/analytics/src/: lib.rs
backend/api/: .env.example  Cargo.toml
backend/api/src/: main.rs
backend/ingestion/: Cargo.toml
backend/ingestion/examples/: demo_loader.rs  live_loader.rs
backend/ingestion/src/: lib.rs  main.rs
data/: sample_aapl.csv
frontend/dashboard/: package-lock.json  package.json  vite.config.js
frontend/dashboard/src/: App.jsx
