[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
ingestion = { path = "../ingestion" }
analytics = { path = "../analytics" }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
