[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # HTTP client
tokio = { version = "1", features = ["full"] }      # Async runtime
serde = { version = "1.0", features = ["derive"] }  # JSON parsing
serde_json = "1.0"                                  # JSON helpers
dotenvy = "0.15"                                    # Env variable loader